--- a/config/locales/activerecord/ticket.ja.yml
+++ b/config/locales/activerecord/ticket.ja.yml
@@ -9,3 +9,6 @@ ja:
         body: '詳細'
         due_date: '締切日'
         is_completed: '完了'
+        created_by: '作成者'
+        updated_by: '更新者'
+        project_id: 'プロジェクト'
